# AI-Code-Duplication-Detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  myconfig.txt  report.html  report.json  report.txt
demo/: imgui_report.html  imgui_report.json  imgui_report.txt
include/: clang_extractor.h  config.h  detector.h  embedder.h  extractor.h  gitscanner.h  json_parser.h  normalizer.h  reader.h  reporter.h  scanner.h  similarity.h  suggestion.h  tokenizer.h  winnowing.h
src/: clang_extractor.cpp  config.cpp  detector.cpp  embedder.cpp  extractor.cpp  gitscanner.cpp  json_parser.cpp  main.cpp  normalizer.cpp  reader.cpp  reporter.cpp  scanner.cpp  similarity.cpp  suggestion.cpp  tokenizer.cpp  winnowing.cpp
tests/: test_main.cpp
tools/: export_codebert.py
